# cetus

./: .gitignore  LICENSE  README.md  README.zh-CN.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
docs/: agent-loop.excalidraw  asset-release-review.md  assistant-eval-cases.csv  assistant-eval.md  bridge.md  devtest-bridge.md  e2e-test-plan.md  meeting-e2e.md  onboarding-guide.md  open-source-readiness.md  plugins.md  remote-access.md
evals/fixtures/: sales_2026.csv
evals/general-benchmark/: .gitignore  README.md  cases.json  run.mjs  upgraded-benchmark.html
evals/general-benchmark/v2/: .gitignore  README.md  cases.json  run.mjs
evals/web-search/: blinded.json  queries.json  run.mjs
evals/web-search/blinded/: ce1.json  ce2.json  dev1.json  dev2.json  dev3.json  fact1.json  fact2.json  niche1.json  niche2.json  price1.json  price2.json  research1.json  weather1.json  zh1.json  zh2.json  zh3.json  zh4.json  zh5.json
scripts/: build-local-signed.sh  build-pi-sidecar.sh  build-release.sh  cetus-devtest.mjs  macos-sign.sh  open-source-audit.sh  package-dmg.sh  release.env.example  signing.env.example
src-tauri/: Cargo.toml  Info.plist  entitlements-pi.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  meeting.json  quick.json  voice.json
src-tauri/cetus-bridge/: Cargo.toml  README.md
src-tauri/cetus-bridge/examples/: minimal_host.rs  replay_jsonl.rs
src-tauri/cetus-bridge/src/: bridge.rs  cli_agent.rs  lib.rs  pi_rpc.rs  remote.rs  worktree.rs
src-tauri/cetus-bridge/tests/: remote_ssh.rs
src-tauri/cetus-extensions/: automation-tools.ts  browser-use.ts  computer-use.ts  deepseek-endpoint.ts  dictation-recall.ts  document-bridge.ts  emit-result.ts  heal-tool-calls.ts  mcp-bridge.ts  mcp-tools.ts  meeting-recall.ts  memory.ts  request-review.ts  screen-recall.ts  send-artifact.ts  skill-discovery.ts  skill-tools.ts  ultra-runtime.ts  untrusted-results.ts  vision-bridge.ts  web-search.ts
src-tauri/cetus-extensions/bridge/: ndjson-log.ts  protocol.ts
src-tauri/cetus-plugins/browser-use/.codex-plugin/: plugin.json
src-tauri/cetus-plugins/browser-use/extensions/: browser-visible.ts
src-tauri/cetus-plugins/browser-use/prompts/: system.md
src-tauri/cetus-plugins/call-e/: .mcp.json
src-tauri/cetus-plugins/call-e/.codex-plugin/: plugin.json
src-tauri/cetus-plugins/call-e/prompts/: system.md
src-tauri/cetus-plugins/call-e/skills/calle/: SKILL.md
src-tauri/cetus-plugins/chrome-use/: .app.json
src-tauri/cetus-plugins/chrome-use/.codex-plugin/: plugin.json
src-tauri/cetus-plugins/chrome-use/extension/: README.md  background.js  content-script.js  manifest.json  popup.html  popup.js  styles.css
src-tauri/cetus-plugins/chrome-use/extensions/: chrome-use.ts
src-tauri/cetus-plugins/chrome-use/prompts/: system.md
src-tauri/cetus-plugins/composio/.codex-plugin/: plugin.json
src-tauri/cetus-plugins/composio/prompts/: system.md
src-tauri/cetus-plugins/composio/skills/composio-byo/: SKILL.md
src-tauri/cetus-plugins/computer-use/.codex-plugin/: plugin.json
src-tauri/cetus-plugins/computer-use/extensions/: computer-use.ts
src-tauri/cetus-plugins/computer-use/prompts/: system.md
src-tauri/cetus-skills/web-design/: SKILL.md
src-tauri/cua/: cetus-cua-helper.swift
src-tauri/icons/: icon.icns
src-tauri/meeting/: cetus-meeting-helper.swift
src-tauri/ocr/: cetus-screen-helper.swift
src-tauri/remote/: app.css  app.js  index.html  manifest.webmanifest
src-tauri/speech/: cetus-spawn-disclaim.c  cetus-speech-helper.swift
src-tauri/src/: agent.rs  ambient.rs  app_event.rs  artifact_thumbnail.rs  auto_archive.rs  automation.rs  automation_api.rs  automation_tool.rs  ax.rs  bash.rs  biasing.rs  caps_remap.rs  capture.rs  chrome_use.rs  cli.rs  cli_backend.rs  commands.rs  control.rs  corrections.rs  cua.rs  devtest.rs  discovery.rs  doubao.rs  dream.rs  focused_text.rs  host_tunnel.rs  hotkey.rs  lib.rs  locale.rs  main.rs  mcp.rs  mcp_oauth.rs  mcp_tool.rs  meeting.rs  memory.rs  model.rs  model_bridge.rs  notify.rs  ocr.rs  panel.rs  (+26 more)
src/app/: fonts.ts  globals.css  layout.tsx  page.tsx
src/components/: brand-icons.tsx  chunk-reload-guard.tsx  command-palette.tsx  theme-watcher.tsx  window-router.tsx  zoom-hud.tsx
src/components/automation/: automation-dialog.tsx  automations-view.tsx
src/components/board/: artifacts-dialog.tsx  board-view.tsx  create-task-dialog.tsx  session-detail-dialog.tsx
src/components/browser/: browser-view.tsx
src/components/chat/: activity-group.tsx  agent-control-card.tsx  artifact-view.tsx  artifacts-panel.tsx  assistant-turn.tsx  backend-picker.tsx  bash-card.tsx  chat-pane.tsx  cli-control-card.tsx  composer.tsx  context-card.tsx  glyph-backdrop.tsx  hover-owner.ts  mention-menu.tsx  message-blocks.tsx  message-bubble.tsx  message-list-boundary.tsx  model-picker.tsx  slash-menu.tsx  thinking-block.tsx  tool-use-card.tsx  vision-card.tsx  workspace-picker.tsx
src/components/devtest/: test-hook.tsx
src/components/devtools/: console-bridge.tsx
src/components/extension-ui/: dialog-host.tsx
src/components/onboarding/: onboarding.tsx
src/components/plugins/: plugins-view.tsx
src/components/quick/: meeting-hud.tsx  quick-panel.tsx  voice-hud.tsx
src/components/screen-history/: screen-history-page.tsx
src/components/settings/: hotkey-recorder.tsx  permission-row.tsx  settings-page.tsx
src/components/sidebar/: app-sidebar.tsx  resources-popover.tsx  view-toggle.tsx
src/components/ui/: ansi-text.tsx  button.tsx  command.tsx  (+10 more)
src/hooks/: use-zoom.ts
src/lib/: artifact.ts  attachments.ts  automation.ts  backend-choice.ts  chat-flavor.ts  chat-state.ts  chat-store.ts  conversation-order.ts  conversation-search.ts  disclosure.ts  draft-store.ts  format.ts  goal.ts  image-attachment.ts  keyboard-shortcuts.ts  markdown.tsx  model-choice.ts  notifications.ts  paths.ts  permissions.ts  quick-context.ts  recent-workspaces.ts  review.ts  tauri.ts  theme-prefs.ts  types.ts  webview-health.ts
src/styles/: cetus-tokens.css
(+37 files in other folders)
