[package]
name = "cetus-bridge"
version = "0.1.0"
description = "Host/extension bridge runtime for Cetus-compatible agent hosts."
edition = "2021"
rust-version = "1.77"
license = "MIT"

[dependencies]
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
